src/test/resources/valid_programs/gcd.notc
void main() {
    printInt(gcd(56, 98));
    printInt(gcd(328, 2829));
}

int gcd(int a, int b) {
    if (a == 0)
        return b;
    return gcd(b % a, a);
}
