src/test/resources/semantic_errors/redecl_same_stm_after_block.notc
void main() {
    int a = 43;
    {
        double d;
    }
    int b, a;
}
